src/styles/Playlist.module.css
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

.list-container {
  text-align: center;
}

.filter-container {
  display: flex;
}

.list-filter-container {
  max-width: 420px;
  border-radius: 10px;
}

.list-filter-container > :nth-child(2) {
  padding-block-start: 1rem;
}

.title-group {
  display: flex;
  flex-direction: column;
}

.filter-container select {
  font-size: 1.6rem;
  padding: 0.5rem;
}

.filter-container option {
  font-size: inherit;
  padding: 0.5rem;
}

.filter-container input {
  width: 12rem;
  font-size: 1.2rem;
  padding: 0.5rem;
  margin-inline-end: 1rem;
}

.album-cover {
  max-width: 100%;
  width: auto;
}

.album-cover img,
.filter-container select,
.filter-container input {
  border-radius: 10px;
}

.container ul {
  padding: 0;
  margin: 0;
  max-width: calc(100vw - 1rem);
  background-color: aqua;
  border-radius: 10px;
}

/* .container li:first-child {
  margin-top: 1rem;
} */

@media only screen and (min-width: 768px) {
  .container {
    flex-direction: row;
    align-items: flex-start;
    gap: 2rem;
    min-height: 40rem;
  }

  .filter-container input {
    width: 20rem;
  }

  .title-group {
    display: flex;
    flex-direction: row;
  }

  .title-group :last-child {
    padding-inline: 0.5rem;
    line-height: 1.625rem;
  }
}

.list-item {
  text-align: start;
  list-style: none;
  border-bottom: 2px solid transparent;
}

.is-playing,
.list-item:hover {
  background-color: rgba(85 85 85 / 5%);
  border-bottom: 2px solid rgba(85 85 85 / 60%);
}

.list-item:hover {
  background-color: rgba(85 85 85 / 5%);
  border-bottom: 2px solid rgba(85 85 85 / 60%);
}

.list-item svg {
  height: 3rem;
  width: auto;
  color: #213547;
  margin-inline-start: -0.75rem;
}

.list-item:hover svg {
  transition: transform ease-in 60ms;
  transform: scale(1.1);
}

.title-group :first-child {
  margin: 0;
  font-size: 1.4rem;
  font-weight: 500;
}

.title-group :last-child {
  margin: 0;
  height: 1.625rem;
  font-size: 1rem;
  font-weight: 300;
}

.button {
  display: flex;
  flex-direction: row;
  align-items: center;
  text-align: start;
  background-color: transparent;
  padding: 0;
  width: 100%;
}

.button:hover {
  border-color: transparent;
}

